converting to ts, made some changes to css, added reset password page, adjusted prisma schemas

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url("react-toastify/dist/ReactToastify.css");
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -15,6 +17,11 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+a:hover {
+  color: rgb(65, 245, 65);
+  transition: 0.4s;
 }
 
 .container {
