--- a/app/ships/page.module.css
+++ b/app/ships/page.module.css
@@ -1,6 +1,6 @@
 .container {
-    align-items: center;
-    gap: 100px;
+    column-count: 3;
+    column-gap: 24px;
 }
 
 .dropdown {
@@ -21,21 +21,28 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
+.navbar{
+    gap: 100px;
+    border: 2px;
+    border-spacing: 50px;
+}
 
 .right {
+    display: flex;
     border: 2px solid #ff6550;
     background: inherit;
 
 }
 
 .build {
+    display: flex;
     border: 2px solid #ff6550;
     background: inherit;
 }
 
 
 .details {
-
+    display: flex;
     border: 2px solid #ff6550;
     background: inherit;
 
@@ -48,6 +55,7 @@
 
 .td {
     border: 1px solid;
+    border-spacing: 0px;
 }
 
 .img {
