--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,34 +1,3 @@
-.container {
-  display: flex;
-  align-items: center;
-  gap: 100px;
-}
-
-.item {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-.text {
+.biscuits__text {
   font-size: 72px;
-  text-align: center;
-  color: rgb(65, 245, 65);
-}
-
-.desc {
-  font-size: 41px;
-  text-align: center;
-}
-
-.img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  text-align: right;
-}
-
-.leftText {
-  text-align: left;
-  gap: 30px;
 }
